@@ -18,7 +18,7 @@ PyObjC_CFTypeToID(PyObject* argument)
 {
 	/* Tollfree bridging of CF (some) objects 
 	 * This list of conversion functions is the complete list of such
-	 * functions in Python 2.3b1
+	 * functions in Python 2.4.1
 	 */
 	int r;
 	id  val;
@@ -33,48 +33,39 @@ PyObjC_CFTypeToID(PyObject* argument)
 /* 
  * NOTE: CFObj_New creates a CF wrapper for any CF object, however we have
  * better information for at least some types: it is impossible to see the
- * difference between mutable and immutable collection types using only 
- * the CF API.
+ * difference between mutable and immutable types using the CF API.
+ *
  */
 PyObject* 
 PyObjC_IDToCFType(id argument)
 {
-	[argument retain];
+	CFTypeRef typeRef = (CFTypeRef)argument;
+	CFTypeID typeID = CFGetTypeID(argument);
 
-	if ([argument isKindOfClass:[NSMutableString class]]) {
+    /*
+     * This function has a net reference count of 0 as the CF wrapper
+     * does not retain, but will do a CFRelease when the Python proxy
+     * goes away.
+     */
+	CFRetain(typeRef);
+
+	/* This could be more efficient, could cache... */
+	if (typeID == CFStringGetTypeID()) {
 		return CFMutableStringRefObj_New((CFMutableStringRef)argument);
-	}
-
-	if ([argument isKindOfClass:[NSString class]]) {
-		return CFStringRefObj_New((CFStringRef)argument);
-	}
-	
-	if ([argument isKindOfClass:[NSMutableArray class]]) {
+	} else if (typeID == CFArrayGetTypeID()) {
 		return CFMutableArrayRefObj_New((CFMutableArrayRef)argument);
-	}
-
-	if ([argument isKindOfClass:[NSArray class]]) {
-		return CFArrayRefObj_New((CFArrayRef)argument);
-	}
-
-	if ([argument isKindOfClass:[NSDictionary class]]) {
-		return CFDictionaryRefObj_New((CFDictionaryRef)argument);
-	}
-
-	if ([argument isKindOfClass:[NSMutableDictionary class]]) {
-		return CFMutableDictionaryRefObj_New(
-				(CFMutableDictionaryRef)argument);
-	}
-
-	if ([argument isKindOfClass:[NSURL class]]) {
+	} else if (typeID == CFDictionaryGetTypeID()) {
+		return CFMutableDictionaryRefObj_New((CFMutableDictionaryRef)argument);
+	} else if (typeID == CFURLGetTypeID()) {
 		return CFURLRefObj_New((CFURLRef)argument);
+/*
+ * TODO: This is in Python 2.5, Fix the #if at some point
+ */
+#if 0
+	} else if (typeID == CFDataGetTypeID()) {
+		return CFMutableDataRefObj_New((CFMutableDataRef)argument);
+#endif
 	}
-
-	/* Apple doesn't say as much, but as NSArray and CFArray are toll-free
-	 * bridged NSObject must also be toll-free bridged to a CoreFoundation
-	 * type.  As is is not document which type this is, we use the most
-	 * generic one.
-	 */
 	return CFObj_New((CFTypeRef)argument);
 }
 
